# enum-variant-macros

./: Cargo.toml  README.md
ProcMacros/: Cargo.toml  README
ProcMacros/src/: lib.rs
ProcMacros/tests/: error_as_expected.rs  generates_tryfroms.rs
ProcMacros/tests/common/: mod.rs
src/: lib.rs  variant_cast_error.rs
tests/: error_as_expected.rs  generates_from_to.rs  generates_refs.rs  generates_tryfroms.rs  hygenic.rs  intend_failure.rs  tuple_derivation.rs
tests/common/: mod.rs
tests/intend_failure/: empty_variant.rs  empty_variant.stderr  greater_than_one_member_variant.rs  greater_than_one_member_variant.stderr  more_than_cast.rs  more_than_cast.stderr  named_member_variant.rs  named_member_variant.stderr  with_empty_struct.rs  with_empty_struct.stderr  with_struct.rs  with_struct.stderr  with_union.rs  with_union.stderr
