[package]
name = "enum_variant_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_variant_macros_macros = { version = "0.1", path = "ProcMacros" }

[dev-dependencies]
strum_macros = "0.22"
trybuild = "1.0"

[workspace]
members = ["ProcMacros"]
