[package]
name = "enum_variant_macros"
version = "0.1.0"
edition = "2021"
authors = ["Baldwin, Josiah <jbaldwin@nwvariancesoftware.dev>"]
license = "MIT OR Apache-2.0"
description = "Macros to generate From & TryFrom for enums"
repository = "https://github.com/MisterEggnog/enum-variant-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_variant_macros_macros = { version = "0.1", path = "ProcMacros" }

[dev-dependencies]
strum_macros = "0.22"
trybuild = "1.0"

[workspace]
members = ["ProcMacros"]
