[package]
name = "enum_variant_macros"
version = "0.3.0"
edition = "2021"
authors = ["Josiah Baldwin <jbaldwin@nwvariancesoftware.dev>"]
license = "MIT OR Apache-2.0"
description = "Macros to generate From & TryFrom for enums"
repository = "https://github.com/MisterEggnog/enum-variant-macros"
categories = ["rust-patterns"]
keywords = ["macros", "enum", "enums", "TryFrom", "variants"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_variant_macros_macros = { version = "0.3.0", path = "ProcMacros" }

[dev-dependencies]
strum_macros = "0.25"
trybuild = "1.0"

[workspace]
members = ["ProcMacros"]
