[package]
name = "enum_variant_macros_macros"
version = "0.1.0"
edition = "2021"
authors = ["Baldwin, Josiah <jbaldwin@nwvariancesoftware.dev>"]
license = "MIT OR Apache-2.0"
description = "Macros for enum_variant_macros"
repository = "https://github.com/MisterEggnog/enum-variant-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
